@@ -1,7 +1,152 @@
 <template>
-  <div class="container">
+  <style>
+    .settings-card {
+      width: 24rem;
+    }
+    .remove-option {
+      color: black;
+      float: right;
+    }
+    .remove-option:hover {
+      color: red;
+    }
+    .list-group-item-action .remove-option {
+      visibility: hidden;
+    }
+    .list-group-item-action:hover .remove-option {
+      visibility: visible;
+    }
+  </style>
+  <div class="container-fluid">
     <p>
       Set values here which will be used to validate modifications to users.
     </p>
+    <h2>Field Options</h2>
+    <div class="d-flex flex-wrap">
+      <div class="card m-3 settings-card">
+        <div class="card-header text-white bg-primary">Options for Company</div>
+        <div class="card-body">
+          <div class="list-group" id="listCompanyOptions"></div>
+          <hr />
+          <button class="btn btn-success">Add New</button>
+        </div>
+      </div>
+      <div class="card m-3 settings-card">
+        <div class="card-header text-white bg-warning">
+          Options for Department
+        </div>
+        <div class="card-body">
+          <div class="list-group" id="listDepartmentOptions">
+            <div
+              class="list-group-item list-group-item-action"
+              data-value="Accounting"
+            >
+              Accounting
+              <div class="remove-option my-0">
+                <i class="mdi mdi-trash-can-outline"></i>
+              </div>
+            </div>
+            <div
+              class="list-group-item list-group-item-action"
+              data-value="Customer Service"
+            >
+              Customer Service
+              <div class="remove-option my-0">
+                <i class="mdi mdi-trash-can-outline"></i>
+              </div>
+            </div>
+            <div
+              class="list-group-item list-group-item-action"
+              data-value="Human Resources"
+            >
+              Human Resources
+              <div class="remove-option my-0">
+                <i class="mdi mdi-trash-can-outline"></i>
+              </div>
+            </div>
+            <div class="list-group-item list-group-item-action" data-value="IT">
+              IT
+              <div class="remove-option my-0">
+                <i class="mdi mdi-trash-can-outline"></i>
+              </div>
+            </div>
+            <div
+              class="list-group-item list-group-item-action"
+              data-value="Logistics"
+            >
+              Logistics
+              <div class="remove-option my-0">
+                <i class="mdi mdi-trash-can-outline"></i>
+              </div>
+            </div>
+            <div
+              class="list-group-item list-group-item-action"
+              data-value="Marketing"
+            >
+              Marketing
+              <div class="remove-option my-0">
+                <i class="mdi mdi-trash-can-outline"></i>
+              </div>
+            </div>
+            <div
+              class="list-group-item list-group-item-action"
+              data-value="Prepack/Production"
+            >
+              Prepack/Production
+              <div class="remove-option my-0">
+                <i class="mdi mdi-trash-can-outline"></i>
+              </div>
+            </div>
+            <div
+              class="list-group-item list-group-item-action"
+              data-value="Receiving"
+            >
+              Receiving
+              <div class="remove-option my-0">
+                <i class="mdi mdi-trash-can-outline"></i>
+              </div>
+            </div>
+            <div
+              class="list-group-item list-group-item-action"
+              data-value="Sales"
+            >
+              Sales
+              <div class="remove-option my-0">
+                <i class="mdi mdi-trash-can-outline"></i>
+              </div>
+            </div>
+            <div
+              class="list-group-item list-group-item-action"
+              data-value="Shipping"
+            >
+              Shipping
+              <div class="remove-option my-0">
+                <i class="mdi mdi-trash-can-outline"></i>
+              </div>
+            </div>
+          </div>
+          <hr />
+          <button class="btn btn-success">Add New</button>
+        </div>
+      </div>
+      <div class="card m-3 settings-card">
+        <div class="card-header text-white bg-info">Options for Title</div>
+        <div class="card-body">
+          <div class="list-group" id="listCompanyOptions"></div>
+          <hr />
+          <button class="btn btn-success">Add New</button>
+        </div>
+      </div>
+      <div class="card m-3 settings-card">
+        <div class="card-header text-white bg-secondary">
+          Domains for Proxy Addresses
+        </div>
+        <div class="card-body">
+          <div class="list-group" id="listCompanyOptions"></div>
+          <hr />
+          <button class="btn btn-success">Add New</button>
+        </div>
+      </div>
+    </div>
   </div>
 </template>
