@@ -2,4 +2,5 @@ v0.1.15-snapshot
 
 Feature: Began tracking changes in a changelog.
 Feature: Wrote 'changelog-uploader' which uploads a new changelog when publishing an update.
+Feature: Mocked the settings page.
 Fix: Updated readme.md
